[gd_scene load_steps=2 format=3 uid="uid://1mh7pk68akni"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_12m1n"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("game_menu", "score_history")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_12m1n")
game_menu = NodePath("Game Menu")
score_history = NodePath("Scores")

[node name="Game Menu" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.5
offset_top = -145.0
offset_right = 192.5
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play button" type="Button" parent="Game Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -108.0
offset_right = 150.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"

[node name="Score History button" type="Button" parent="Game Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = 28.0
offset_right = 153.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
text = "Score History"

[node name="Scores" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -198.0
offset_top = -266.0
offset_right = 198.0
offset_bottom = 266.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Scores"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Scores"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -62.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="pressed" from="Game Menu/Play button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Game Menu/Score History button" to="." method="_on_score_history_button_pressed"]
[connection signal="pressed" from="Scores/Button" to="." method="_on_button_pressed"]
